--- a/Code/Model 2 (stacking)/AAT-DT_v21_cleanup.ipynb
+++ b/Code/Model 2 (stacking)/AAT-DT_v21_cleanup.ipynb
@@ -4,10 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Advanced Algorithmic Trading DT - V12\n",
+    "## Advanced Algorithmic Trading DT - V13\n",
     "\n",
     "## Updates from Last Version\n",
-    "Trial of shift today's price so we dont cheat"
+    "- Fix data shifting\n",
+    "- Clean up the files & organization\n",
+    "\n",
+    "\n",
+    "## Contents\n",
+    "- Basic Setup\n",
+    "- Clean Data & Create Technical Indicator Variables\n",
+    "- Standardize Data & Create X & y\n",
+    "- Time Series Train Test Split\n",
+    "    - Bagging\n",
+    "    - Random Forest\n",
+    "    - Boosting\n",
+    "    - Linear Regression\n",
+    "- Misc Graphs\n",
+    "- Hyperparameter Tuning --> Grid Search\n",
+    "- Forecasting w/ Best Models\n",
+    "- Binary Forecasting (confusion matrices, ROC AUC)"
    ]
   },
   {
@@ -19,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +85,7 @@
     "random_state = 42  # Seed\n",
     "n_jobs = -1 # -1 --> all Processors # Parallelisation factor for bagging, random forests (controls the number of processor cores used)\n",
     "n_estimators = 200 # total number of estimators ot use in the MSE graph\n",
-    "step_factor = 10 # controls cranularity of calculation by stepping through the number of estimators\n",
+    "step_factor = 10 # controls granularity of calculation by stepping through the number of estimators\n",
     "axis_step = int(n_estimators / step_factor) # 1000/10 = 100 separate calculations will be performed for each of the 3 ensebmle methods\n"
    ]
   },
